fix: main content should no longer be clipped on small screens with toc
refactored and simplified content-with-toc styles, fixed main content to always align with other centered containers.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,6 +64,7 @@ $container-max-widths: (
     md: 720px,
     lg: 960px,
     xl: 1280px,
+    xxl: 1281px,
 );
 
 $grid-breakpoints: (
