--- a/_sass/components/_toc.scss
+++ b/_sass/components/_toc.scss
@@ -8,57 +8,42 @@ html {
     scroll-behavior: smooth;
 }
 
+
 .content-with-toc {
-    position: relative;
-    margin: 0 auto;
-
-    display: flex;
-    flex-flow: row-reverse nowrap;
-
-    .content {
-        width: content;
-        max-width: 100%;
-        flex: 1 0;
-    }
-    
     @each $breakpoint, $width in $grid-breakpoints {
-        $content-width: map-get($container-max-widths, $breakpoint);
-        
-        @if $content-width != null {
-            $margins: calc(100% - $content-width);
-            
+        $container-max-width: map-get($container-max-widths, $breakpoint);
+        @if $container-max-width != null and $width >= map-get($grid-breakpoints, "md") {
             @media screen and (min-width: $width) {
-                margin-left: max(0px, min($margins / 2, $margins - $toc-width));
-                margin-right: max(0px, $margins / 2 - $toc-width);
+                display: grid;
 
-                .content {
-                    max-width: $content-width;
-                }
+                $ml-width: calc((100% - $container-max-width) / 2);
+                $content-width: min(calc(100% - $toc-width - $ml-width), $container-max-width);
+                $mr-width: calc(100% - $ml-width - $content-width - $toc-width);
+                
+                grid-template-columns: $ml-width $content-width $toc-width $mr-width;
+                grid-template-areas: "ml content toc mr";
             }
         }
     }
 
+    .content {
+        grid-area: content;
+        padding: 0 10px;
+    }
+
     .toc {
+        grid-area: toc;
         position: sticky;
-        top: 2em;
+        top: 4em;
+        margin: 6em 0 0 10px;
         align-self: start;    
         
         display: none;
-        flex: 0 0 $toc-width;
-        padding-left: 2em;
-        padding-top: 1em;
         line-height: 1.2;
 
         @media screen and (min-width: map-get($grid-breakpoints, "md")){
             display: block;
         }
-
-        // &::before {
-        //     content: 'ON THIS PAGE';
-        //     position: relative;
-        //     font-family: Arial, sans-serif;
-        //     font-weight: lighter;
-        // }
 
         ul {
             list-style: none;
